--- a/messaging-app-with-CRA/package.json
+++ b/messaging-app-with-CRA/package.json
@@ -14,12 +14,13 @@
     "pretty-bytes": "^5.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.10.1",
     "react-scripts": "4.0.3",
     "react-use": "^17.2.4",
     "tiny-human-time": "^1.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
